--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Install Dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
 
-      - name: Run Tests
-        run: php artisan test
+#      - name: Run Tests
+#        run: php artisan test
 
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1
