Workflow GitHub Actions, no test

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           host: ${{ secrets.HOSTINGER_SSH_IP }}
           username: ${{ secrets.HOSTINGER_SSH_USERNAME }}
+          port: ${{ secrets.HOSTINGER_SSH_PORT }}
           key: ${{ secrets.HOSTINGER_SSH_KEY_ED25519 }}
           script: |
             cd ${{ secrets.HOSTINGER_BARCODE_DIRECTORY }}
