Update barcode generation to use transparent background and improve cleanup process

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,5 +32,5 @@ jobs:
           script: |
             cd ${{ secrets.HOSTINGER_BARCODE_DIRECTORY }}
             git pull origin main
-            composer install --no-dev            
+            php ~/composer.phar install --no-dev            
             php artisan optimize:clear
