--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "_ide_helper.php"
+        ]
     },
     "scripts": {
         "post-autoload-dump": [
