--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,20 +7,51 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_DATABASE: test_db
+          MYSQL_USER: test_user
+          MYSQL_PASSWORD: test_password
+          MYSQL_ROOT_PASSWORD: root_password
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
+    env:
+      DB_CONNECTION: mysql
+      DB_HOST: 127.0.0.1
+      DB_PORT: 3306
+      DB_DATABASE: test_db
+      DB_USERNAME: test_user
+      DB_PASSWORD: test_password
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-#      - name: Install Composer
-#        uses: php-actions/composer@v2
-#        with:
-#          args: install --no-dev
-
       - name: Install Dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
 
-#      - name: Run Tests
-#        run: php artisan test
+      - name: Wait for MySQL
+        run: |
+          for i in {1..30}; do
+            if mysqladmin ping -h"127.0.0.1" -u"test_user" -p"test_password" --silent; then
+              break
+            fi
+            sleep 1
+          done
+
+      - name: Run Migrations
+        run: php artisan migrate --force
+
+      - name: Run Tests
+        run: php artisan test
 
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1
