Comment out invalid authentication test and update test command verbosity in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
         run: php artisan migrate --force
 
       - name: Run Tests
-        run: php artisan test -v
+        run: php artisan test
 
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1
