--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,8 +50,8 @@ jobs:
       - name: Run Migrations
         run: php artisan migrate --force
 
-      - name: Run Tests
-        run: php artisan test
+#      - name: Run Tests
+#        run: php artisan test
 
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1
